{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 19,
  "lineage": "422dd665-5b24-a5e2-cda0-52de93e8d088",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "project-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f4686a1f74c3c789",
            "domain": "vpc",
            "id": "eipalloc-07af90fc0d59b8efa",
            "instance": "i-064ce0f302b8dedbd",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-03b8865254989f539",
            "private_dns": "ip-10-0-1-50.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-79-2-142.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.2.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_network_interface.project-network-interface",
            "aws_security_group.project-security-group",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567f647e75c7bc05",
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:instance/i-064ce0f302b8dedbd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064ce0f302b8dedbd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03b8865254989f539"
              }
            ],
            "primary_network_interface_id": "eni-03b8865254989f539",
            "private_dns": "ip-10-0-1-50.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "54.79.2.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01640c29d0472d928",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f8e0511eff938cf",
            "tags": {
              "Name": "project-server"
            },
            "tags_all": {
              "Name": "project-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c31fa0c2a430d49c"
            ]
          },
          "dependencies": [
            "aws_network_interface.project-network-interface",
            "aws_security_group.project-security-group",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:internet-gateway/igw-0db9b18c637e47dde",
            "id": "igw-0db9b18c637e47dde",
            "owner_id": "249927749705",
            "vpc_id": "vpc-05ad87224a214212c"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "project-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0c4d5fbf348710214",
                "device_index": 0,
                "instance": "i-064ce0f302b8dedbd"
              }
            ],
            "id": "eni-03b8865254989f539",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:a1:f1:a2:72:ca",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c31fa0c2a430d49c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f8e0511eff938cf"
          },
          "dependencies": [
            "aws_security_group.project-security-group",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:route-table/rtb-0fc139a521b71c383",
            "id": "rtb-0fc139a521b71c383",
            "owner_id": "249927749705",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db9b18c637e47dde",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db9b18c637e47dde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-route-table"
            },
            "tags_all": {
              "Name": "project-route-table"
            },
            "vpc_id": "vpc-05ad87224a214212c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a25d1175c12f5461",
            "route_table_id": "rtb-0fc139a521b71c383",
            "subnet_id": "subnet-08f8e0511eff938cf"
          },
          "dependencies": [
            "aws_internet_gateway.project-gateway",
            "aws_route_table.project-route-table",
            "aws_subnet.project-subnet",
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:security-group/sg-0c31fa0c2a430d49c",
            "description": "Security group for allowing network traffic on ports 22, 80 \u0026 443.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c31fa0c2a430d49c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS inbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "project-security-group",
            "name_prefix": "",
            "owner_id": "249927749705",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-security-group"
            },
            "tags_all": {
              "Name": "project-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ad87224a214212c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:subnet/subnet-08f8e0511eff938cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-08f8e0511eff938cf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "249927749705",
            "tags": {
              "Name": "project-subnet"
            },
            "tags_all": {
              "Name": "project-subnet"
            },
            "vpc_id": "vpc-05ad87224a214212c"
          },
          "dependencies": [
            "aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:249927749705:vpc/vpc-05ad87224a214212c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01aca666bf7e1471e",
            "default_route_table_id": "rtb-098f8827c33e1199f",
            "default_security_group_id": "sg-038b7811afed5b3ee",
            "dhcp_options_id": "dopt-6dbfac0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05ad87224a214212c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098f8827c33e1199f",
            "owner_id": "249927749705",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}